--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,54 +44,54 @@ jobs:
             target: x86_64-unknown-linux-musl
             compress: true
             cargo_flags: ""
-          #- os: ubuntu-latest
-          #  target: x86_64-unknown-linux-gnu
-          #  compress: true
-          #  cargo_flags: ""
-          #- os: ubuntu-latest
-          #  target: aarch64-unknown-linux-musl
-          #  compress: true
-          #  cargo_flags: ""
-          #- os: ubuntu-latest
-          #  target: aarch64-unknown-linux-gnu
-          #  compress: true
-          #  cargo_flags: ""
-          #- os: ubuntu-latest
-          #  target: armv7-unknown-linux-musleabihf
-          #  compress: true
-          #  cargo_flags: ""
-          #- os: ubuntu-latest
-          #  target: armv7-unknown-linux-gnueabihf
-          #  compress: true
-          #  cargo_flags: ""
-          #- os: ubuntu-latest
-          #  target: arm-unknown-linux-musleabihf
-          #  compress: true
-          #  cargo_flags: ""
-          #- os: ubuntu-latest
-          #  target: riscv64gc-unknown-linux-gnu
-          #  compress: false
-          #  cargo_flags: "--no-default-features"
-          #- os: windows-latest
-          #  target: x86_64-pc-windows-msvc
-          #  compress: true
-          #  cargo_flags: ""
-          #- os: windows-latest
-          #  target: i686-pc-windows-msvc
-          #  compress: true
-          #  cargo_flags: ""
-          #- os: macos-latest
-          #  target: x86_64-apple-darwin
-          #  compress: true
-          #  cargo_flags: ""
-          #- os: macos-latest
-          #  target: aarch64-apple-darwin
-          #  compress: false
-          #  cargo_flags: ""
-          #- os: ubuntu-latest
-          #  target: x86_64-unknown-freebsd
-          #  compress: false
-          #  cargo_flags: ""
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+            compress: true
+            cargo_flags: ""
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-musl
+            compress: true
+            cargo_flags: ""
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+            compress: true
+            cargo_flags: ""
+          - os: ubuntu-latest
+            target: armv7-unknown-linux-musleabihf
+            compress: true
+            cargo_flags: ""
+          - os: ubuntu-latest
+            target: armv7-unknown-linux-gnueabihf
+            compress: true
+            cargo_flags: ""
+          - os: ubuntu-latest
+            target: arm-unknown-linux-musleabihf
+            compress: true
+            cargo_flags: ""
+          - os: ubuntu-latest
+            target: riscv64gc-unknown-linux-gnu
+            compress: false
+            cargo_flags: "--no-default-features"
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+            compress: true
+            cargo_flags: ""
+          - os: windows-latest
+            target: i686-pc-windows-msvc
+            compress: true
+            cargo_flags: ""
+          - os: macos-latest
+            target: x86_64-apple-darwin
+            compress: true
+            cargo_flags: ""
+          - os: macos-latest
+            target: aarch64-apple-darwin
+            compress: false
+            cargo_flags: ""
+          - os: ubuntu-latest
+            target: x86_64-unknown-freebsd
+            compress: false
+            cargo_flags: ""
 
     steps:
       - name: Checkout code
@@ -232,18 +232,18 @@ jobs:
         run: podman manifest push myexe docker.io/harlancn/myexe:${{ needs.publish.outputs.version }}
         if: startsWith(github.ref_name, 'v')
 
-      - name: podman build linux/arm64 (alpine edition)
-        run: podman build --format docker --platform linux/arm64/v8 --manifest myexe-alpine -f Containerfile.alpine target/aarch64-unknown-linux-musl/release
+      #- name: podman build linux/arm64 (alpine edition)
+      #  run: podman build --format docker --platform linux/arm64/v8 --manifest myexe-alpine -f Containerfile.alpine target/aarch64-unknown-linux-musl/release
 
-      - name: podman build linux/amd64 (alpine edition)
-        run: podman build --format docker --platform linux/amd64 --manifest myexe-alpine -f Containerfile.alpine target/x86_64-unknown-linux-musl/release
+      #- name: podman build linux/amd64 (alpine edition)
+      #  run: podman build --format docker --platform linux/amd64 --manifest myexe-alpine -f Containerfile.alpine target/x86_64-unknown-linux-musl/release
 
-      - name: podman build linux/arm (alpine edition)
-        run: podman build --format docker --platform linux/arm/v7 --manifest myexe-alpine -f Containerfile.alpine target/armv7-unknown-linux-musleabihf/release
+      #- name: podman build linux/arm (alpine edition)
+      #  run: podman build --format docker --platform linux/arm/v7 --manifest myexe-alpine -f Containerfile.alpine target/armv7-unknown-linux-musleabihf/release
 
-      - name: podman manifest push latest (alpine edition)
-        run: podman manifest push myexe-alpine docker.io/harlancn/myexe:alpine
+      #- name: podman manifest push latest (alpine edition)
+      #  run: podman manifest push myexe-alpine docker.io/harlancn/myexe:alpine
 
-      - name: podman manifest push tag version (alpine edition)
-        run: podman manifest push myexe-alpine docker.io/harlancn/myexe:${{ needs.publish.outputs.version }}-alpine
-        if: startsWith(github.ref_name, 'v')
+      #- name: podman manifest push tag version (alpine edition)
+      #  run: podman manifest push myexe-alpine docker.io/harlancn/myexe:${{ needs.publish.outputs.version }}-alpine
+      #  if: startsWith(github.ref_name, 'v')
